# Miniscope-DAQ-QT-Software

./: .gitignore  BNODisplay.qml  BUILD_LINUX.md  CMakeLists.txt  ControlPanel.qml  Miniscope-DAQ-QT-Software.pro  Miniscope_V4.qml  Miniscope_V4_BNO.qml  README.md  VideoPropertyControl.qml  VideoSliderControl.qml  VideoSpinBoxControl.qml  backend.cpp  backend.h  behaviorCam.qml  behaviorcam.cpp  behaviorcam.h  behaviortracker.cpp  behaviortracker.h  controlpanel.cpp  controlpanel.h  datasaver.cpp  datasaver.h  environment.yml  main.cpp  main.qml  miniscope.cpp  miniscope.h  miniscope.qml  newquickview.h  qml.qrc  videodisplay.cpp  videodisplay.h  videostreamocv.cpp  videostreamocv.h
.github/workflows/: build_windows.yml  release-linux.yml  release.yml
My User Configs/: UserConfigExample-V4Miniscope-plus-2-WebCams.json  UserConfigExample_MiniCAM_DLC_Trace.json  UserConfigExample_V3_Miniscope.json  UserConfigExample_V4_BNO_Plus_BehavCam.json  UserConfigExample_V4_Ephys_Miniscope.json  UserConfigExample_V4_Playback_traceDisplay.json  UserConfigExample_WebCam_SLEAP_trace.json  UserConfigExample_WebCam_SLEAP_trace_new.json  UserConfigExample_WebCam_SLEAP_trace_new_new.json  UserConfigExample_WebCam_w_traceDisplay.json
Scripts/: DLCwrapper.py  SLEAPwrapper.py
cmake/: launcher.bat.in
deviceConfigs/: behaviorCams.json  ephysDevices.json  miniscopes.json  userConfigProps.json  videoDevices.json
installer/: MiniscopeDAQ.iss
packaging/: 99-miniscope.rules  AppRun.wrapper  build-appimage.sh  miniscope-daq.desktop
shaders/: imageBasic.vert  imageSaturationScaling.frag
source/: AddDeviceDialog.qml  BNODisplay.qml  CMakeLists.txt  ControlPanel.qml  FpsItem.qml  Miniscope-DAQ-QT-Software.pro  Miniscope_V3.qml  Miniscope_V4.qml  Miniscope_V4_BNO.qml  TopMenu.qml  TraceDisplayWindow.qml  TreeViewerJSON.qml  VideoSliderControl.qml  VideoSpinBoxControl.qml  backend.cpp  backend.h  behaviorCam.qml  behaviorTracker.qml  behaviorcam.cpp  behaviorcam.h  behaviortracker.cpp  behaviortracker.h  behaviortrackerworker.cpp  behaviortrackerworker.h  controlpanel.cpp  controlpanel.h  datasaver.cpp  datasaver.h  ephysdevice.cpp  ephysdevice.h  main.cpp  main.qml  miniscope.cpp  miniscope.h  moc_predefs.h  newquickview.cpp  newquickview.h  pythonTest.py  qml.qrc  source.pro  (+13 more)
source/shaders/: grid.frag  grid.vert  imageBasic.vert  imageSaturationScaling.frag  movingBar.frag  movingBar.vert  texture.frag  texture.vert  trace.frag  trace.vert  tracker.frag  tracker.vert  trackerOverlay.frag  trackerOverlay.vert
tools/: deploy.py  launcher.cpp
userConfigs/: LinuxTest-Miniscope.json  LinuxTest-WebCamOnly.json  UserConfigExample-V3-Miniscope-plus-WebCam.json  UserConfigExample-V4-Miniscope-plus-WebCam.json  UserConfigExample-V4Miniscope-plus-2-WebCams.json  UserConfigExample-primary.json  UserConfigExample.json  UserConfigExample_BehavCam.json  UserConfigExample_Dual_MiniCAM.json  UserConfigExample_Dual_MiniCAM_PLUS_V4.json  UserConfigExample_MiniCAM.json  UserConfigExample_MiniLFM.json  UserConfigExample_V3_Miniscope.json  UserConfigExample_V3_Miniscope_Plus_BehavCam.json  UserConfigExample_V4_2C_Miniscope.json  UserConfigExample_V4_BNO_Miniscope.json  UserConfigExample_V4_BNO_Miniscope_traceDisplay - Copy.json  UserConfigExample_V4_BNO_Miniscope_traceDisplay - Copy_new.json  UserConfigExample_V4_BNO_Miniscope_traceDisplay.json  UserConfigExample_V4_BNO_Plus_BehavCam.json  UserConfigExample_V4_Playback_traceDisplay.json  UserConfigExample_WebCam.json  UserConfigExample_WebCam_DLC.json  UserConfigExample_WebCam_DLC_trace.json  UserConfigExample_WebCam_DLC_trace_new.json  UserConfigExample_WebCam_V4_DLC_Trace.json  UserConfigExample_WebCam_w_traceDisplay.json
